# PSDL

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CTestConfig.cmake  README.md  gcovr.cfg  vcpkg.json
.github/workflows/: ci.yml
CMake/: AddAndSetUpTargets.cmake  CMakeUnit.cmake  CerialCodeGenerator.cmake  Coverage.cmake  DeveloperMode.cmake  Folders.cmake  Format.cmake  FormatCMake.cmake  FormatCpp.cmake  FormatScriptHelpers.cmake  FormatTargets.cmake  GersemiStubs.cmake  InstallRules.cmake  LanguageStandard.cmake  MarkdownCoverageReport.cmake  MetadataFromVcpkg.cmake  OptionsAndVariables.cmake  PackageConfig.cmake  Spell.cmake  SpellTargets.cmake
Cerial/: Byte.hpp  CMakeLists.txt  Cerial.hpp
Tests/: CMakeLists.txt  Cerial.test.cpp  CodeGenerator.test.cmake  Dummy.test.cpp
Tests/Data/: ExampleCode.hpp
